<?xml version="1.0"?>
<package>
  <name>rplidar_python</name>
  <version>0.0.0</version>
  <description>The rplidar_python package</description>

  <maintainer email="turtlebot2@todo.todo">turtlebot2</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>message_generation</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
